--- a/configure.in
+++ b/configure.in
@@ -8,6 +8,7 @@ fi
 CC=`${R_HOME}/bin/R CMD config CC`
 CFLAGS=`${R_HOME}/bin/R CMD config CFLAGS`
 
+echo "Special note:"
 AC_PATH_NETCDF
 
 foundnetcdf=false
