--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ncdf
 Title: Interface to Unidata netCDF data files
 Maintainer:  David Pierce <dpierce@ucsd.edu>
-Version: 1.1
+Version: 1.2
 Author: David Pierce
 Description: This package provides a high-level R interface to Unidata's
  netCDF data files, which are portable across platforms and include
@@ -11,5 +11,7 @@ Description: This package provides a high-level R interface to Unidata's
  or manipulate existing netCDF files.
  This interface provides considerably more functionality than the "netCDF"
  package.  It is not compatible with the "netCDF" package.
+ Release 1.2 adds better support for character variables, and miscellaneous
+ bug fixes.
 License: GPL version 2 or newer
 URL: http://www.unidata.ucar.edu/packages/netcdf/
