--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ncdf
 Title: Interface to Unidata netCDF data files
 Maintainer:  David Pierce <dpierce@ucsd.edu>
-Version: 1.4
+Version: 1.5
 Author: David Pierce
 Description: This package provides a high-level R interface to Unidata's
  netCDF data files, which are portable across platforms and include
@@ -9,12 +9,12 @@ Description: This package provides a high-level R interface to Unidata's
  Using this package netCDF files can be opened and data sets read in easily.
  It is also easy to create new netCDF dimensions, variables, and files,
  or manipulate existing netCDF files.
- This interface provides considerably more functionality than the "netCDF"
- package.  It is not compatible with the "netCDF" package.
+ This interface provides considerably more functionality than the old "netCDF"
+ package for R, and is not compatible with the old "netCDF" package for R.
  Release 1.2 adds better support for character variables, and miscellaneous
  bug fixes.  Release 1.3 is for miscellaneous bug fixes, and improves the
  documentation.  Release 1.4 improves the efficiency, and adds small bug
- fixes.
+ fixes.  Release 1.5 adds support for byte variables, plus small bug fixes.
 License: GPL version 2 or newer
 URL: http://cirrus.ucsd.edu/~pierce/ncdf
-Packaged: Thu Jun 23 14:46:05 2005; root
+Packaged: Mon Feb 27 11:50:13 2006; root
