--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,5 +1,2 @@
-##PKG_CPPFLAGS=-I/path/to/netcdf/header
-##PKG_LIBS=-L/path/to/netcdf/lib -lnetcdf
-
-PKG_LIBS=-L@NETCDF_LIBDIR@ -l@NETCDF_LIBNAME@
-PKG_CPPFLAGS=-I@NETCDF_INCDIR@
+PKG_CPPFLAGS=@PKG_CPPFLAGS@
+PKG_LIBS=@PKG_LIBS@
