--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ncdf
 Title: Interface to Unidata netCDF data files
 Maintainer: Brian Ripley <ripley@stats.ox.ac.uk>
-Version: 1.6.6
+Version: 1.6.7
 Author: David Pierce <dpierce@ucsd.edu>
 Description: This package provides a high-level R interface to
         Unidata's netCDF data files, which are portable across
@@ -31,6 +31,7 @@ Description: This package provides a high-level R interface to
         you do as well.  I may require this in a future release, as it
         seems to cause people problems.
 License: GPL (>= 2)
-Packaged: 2011-09-01 09:09:24 UTC; ripley
+Packaged: 2014-06-16 11:56:32 UTC; ripley
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2011-09-02 11:16:12
+Date/Publication: 2014-06-16 14:07:25
